refactor(web,liquibase): manual Java 21 improvements
Adopt var, String API (.strip/.isBlank), Collections factories, try-with-resources

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>